Added Google search book API to service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="app-container">
     <app-navbar></app-navbar>
+    <app-search-book></app-search-book>
 </div>
 
 <router-outlet></router-outlet>
