--- a/src/app/books/search-book/search-book.component.html
+++ b/src/app/books/search-book/search-book.component.html
@@ -1,1 +1,20 @@
-<p>search-book works!</p>
+<div>
+    <h1>Books</h1>
+
+    <form>
+        <input type="text" [(ngModel)]="searchText">
+        <button type="button" (click)="search()">Search</button>
+    </form>
+
+    <div>
+        <h2>Search Results</h2>
+        <ul>
+            <li *ngFor="let book of books">
+                <div>
+                    <p>Title: {{ book.volumeInfo.title }}</p>
+                    <p>Authors: {{ book.volumeInfo.authors }}</p>
+                </div>
+            </li>
+        </ul>
+    </div>
+</div>
