--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+<nav class="navbar navbar-expand-sm">
     <div class="container-fluid">
         <!-- Navbar Logo Brand -->
-        <img src="../assets/images/logos/navbar-logo-white.png" alt="Navbar Logo">
+        <img src="../assets/images/logos/navbar-logo-black.png" alt="Navbar Logo">
         
         <!-- Navbar Toggler Button -->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
