--- a/src/app/books/book-search/book-search.component.html
+++ b/src/app/books/book-search/book-search.component.html
@@ -1,21 +1,20 @@
-<div>
-    <h1>Books</h1>
-
-    <form>
-        <input type="text" [(ngModel)]="searchText" [ngModelOptions]="{standalone: true}">
-        <button type="button" (click)="search()">Search</button>
+<div class="container">
+    <form class="search-container mb-3">
+        <input type="text" 
+        [(ngModel)]="searchText" 
+        [ngModelOptions]="{standalone: true}" 
+        class="search-input form-control"
+        placeholder="Search a book...">
+        <button type="button" (click)="search()" class="search-button btn btn-primary">Search</button>
     </form>
 
-    <div>
-        <h2>Search Results</h2>
-        <ul>
-            <li *ngFor="let book of books">
-                <div>
-                    <p>Title: {{ book.volumeInfo.title }}</p>
-                    <p>Authors: {{ book.volumeInfo.authors }}</p>
-                    <img *ngIf="book.volumeInfo.imageLinks" [src]="book.volumeInfo.imageLinks.thumbnail" alt="Book Cover">
-                </div>
-            </li>
-        </ul>
+    <div class="search-results">
+        <div class="book-card" *ngFor="let book of books">
+            <img *ngIf="book.volumeInfo.imageLinks" [src]="book.volumeInfo.imageLinks.thumbnail" alt="Book Cover" class="img-fluid">
+            <div class="book-card-content">
+                <p class="book-title">Title: {{ book.volumeInfo.title }}</p>
+                <p>Authors: {{ book.volumeInfo.authors }}</p>
+            </div>
+        </div>
     </div>
 </div>
