--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
+.background {
+    margin: 0;
+    background-image: linear-gradient(45deg, #93a5cf 0%, #e4efe9 100%);
+    background-size: cover;
+    background-repeat: no-repeat;
+    min-height: 100vh; /* Ensure the background covers the entire viewport height */
+}
