--- a/src/app/books/book-search/book-search.component.html
+++ b/src/app/books/book-search/book-search.component.html
@@ -14,6 +14,7 @@
             <div class="book-card-content">
                 <p class="book-title">Title: {{ book.volumeInfo.title }}</p>
                 <p>Authors: {{ book.volumeInfo.authors }}</p>
+                <button (click)="showDetails(book)">Details</button>
             </div>
         </div>
     </div>
