--- a/src/app/books/book-search/book-search.component.css
+++ b/src/app/books/book-search/book-search.component.css
@@ -89,3 +89,19 @@
     white-space: nowrap;
     color: #333;
   }
+
+  .card-image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
+    opacity: 25%;
+  }
+  
+  .card-body {
+    z-index: 1;
+    padding: 20px;
+  }
