--- a/src/app/books/books.component.html
+++ b/src/app/books/books.component.html
@@ -1,27 +1,47 @@
-<div class="container">
-    <form class="search-container">
-        <input type="text" 
-        [(ngModel)]="searchText" 
-        [ngModelOptions]="{standalone: true}" 
-        class="search-input"
-        placeholder="Search a book...">
-        <button type="button" (click)="search()" class="search-button">Search</button>
-    </form>
-
-    <!-- Move the <p> element outside of the search-results div -->
-    <p *ngIf="searchText != ''" class="text-center mt-3 fs-6"><strong>Search result for:</strong> {{ searchText }}</p>
-
-    <div class="search-results">
-        <div class="book-card" *ngFor="let book of books">
-            <div class="card-image">
-                <img *ngIf="book.volumeInfo.imageLinks" [src]="book.volumeInfo.imageLinks.thumbnail" class="card-image" alt="Book Image">
-                <img *ngIf="!book.volumeInfo.imageLinks" src="../../assets/images/library.jpg" class="card-image" alt="Background Image">
-            </div>
-            <div class="book-card-content">
-                    <p class="book-title">Title: {{ book.volumeInfo.title }} </p>
-                <p class="book-authors">Authors: {{ book.volumeInfo.authors }}</p>
-                <button (click)="showDetails(book)">Details</button>
+<div class="app-container">
+    <nav class="navbar navbar-expand-sm navbar-light">
+        <div class="container-fluid">
+            <div class="row">
+                <!-- Brand Logo -->
+                <div class="col-lg-3 col-sm-12 brand-logo d-flex align-items-center text-md-center text-sm-center text-center">
+                    <a href="">
+                        <img src="../assets/images/logos/navbar-logo-black.png" alt="Brand Logo" routerLink="">
+                    </a>
+                </div>
+    
+                <!-- Navbar Toggler Button -->
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+    
+                <!-- Navbar Item Links -->
+                <div class="col-lg-6 col-sm-12 collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
+                    <ul class="navbar-nav fs-5">
+                        <li class="nav-item">
+                            <a class="nav-link active" routerLink="">
+                                <i class="fas fa-home me-1"></i> Home
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" routerLink="about-us">
+                                <i class="fas fa-info-circle me-1"></i> About Us
+                            </a>
+                        </li>
+                    </ul>
+                    
+                </div>
+    
+                <!-- Social Media Logos -->
+                <div class="col-lg-3 col-sm-12 socialmedia-logos d-flex align-items-center justify-content-center">
+                    <a href="https://www.github.com/arditgashii/" class="d-flex justify-content-end me-1" target="_blank">
+                        <img src="../../assets/images/logos/github-logo.png" alt="Github Logo">
+                    </a>
+                    <a href="https://www.linkedin.com/in/arditgashii" target="_blank">
+                        <img src="../../assets/images/logos/linkedin-logo.png" alt="LinkedIN Logo">
+                    </a>
+                </div>
             </div>
         </div>
-    </div>
+    </nav>
 </div>
+<router-outlet></router-outlet>
