--- a/src/styles.css
+++ b/src/styles.css
@@ -3,5 +3,9 @@
     background-image: linear-gradient(45deg, #93a5cf 0%, #e4efe9 100%);
     background-size: cover;
     background-repeat: no-repeat;
-    min-height: 100vh; /* Ensure the background covers the entire viewport height */
+    min-height: 100vh;
+}
+
+body{
+    height: 100vh;
 }
