--- a/src/app/books/book-details/book-details.component.html
+++ b/src/app/books/book-details/book-details.component.html
@@ -1,24 +1,27 @@
-<div *ngIf="bookDetails" class="container mt-3">
+<div *ngIf="bookDetails" class="container mt-3 h-100">
   <h2 class="text-center text-primary mb-5">{{ bookDetails.title }}</h2>
   <div class="row">
-      <div class="col-lg-6">
-          <div class="book-image-container h-100 d-flex align-items-center justify-content-center position-relative">
-              <img [src]="bookDetails.imageLinks ? bookDetails.imageLinks.thumbnail : '../../assets/images/no-image.png'" alt="Book Cover" class="img-fluid rounded">
-          </div>
+    <!-- Kontejneri për imazhin e librit -->
+    <div class="col-lg-6">
+      <div class="book-image-container">
+        <img
+          [src]="bookDetails.imageLinks ? bookDetails.imageLinks.thumbnail : '../../assets/images/no-image.png'"
+          alt="Book Cover"
+          class="img-fluid" />
       </div>
-      <div class="col-lg-6 mb-4">
-          <div class="card h-100">
-              <div class="card-body">
-                  <img src="../../assets/images/library.jpg" class="card-image" alt="Background Image">
-                  <h5 class="card-title fw-bold fs-5 mb-2">Description: </h5>
-                  <p class="card-text summary fs-6" [innerHTML]="bookDetails.description ? bookDetails.description : 'No summary available for this book'"></p>
-                  <div class="mt-3">
-                      <li><span class="fw-bold fs-5">Publication Date: </span> <span class="fs-5">{{ bookDetails.publishedDate ? bookDetails.publishedDate : 'Publication date not available' }}</span></li>
-                      <li><span class="fw-bold fs-5">Publisher: </span> <span class="fs-5">{{ bookDetails.publisher ? bookDetails.publisher : 'Publisher information not available' }}</span></li>
-                      <li><span class="fw-bold fs-5">ISBN: </span> <span class="fs-5">{{ bookDetails.industryIdentifiers && bookDetails.industryIdentifiers.length > 0 ? bookDetails.industryIdentifiers[0].identifier : 'ISBN not available' }}</span></li>
-                  </div>
-              </div>
-          </div>
+    </div>
+
+    <!-- Kontejneri për përshkrimin e librit -->
+    <div class="col-lg-6">
+      <div class="book-description">
+        <h5 class="fw-bold fs-4 mb-3">Description:</h5>
+        <p class="summary fs-5" [innerHTML]="getLimitedDescription()"></p>
+        <ul class="book-details-list mt-3">
+          <li><span class="fw-bold fs-5">Publication Date:</span> {{ bookDetails.publishedDate || 'Publication date not available' }}</li>
+          <li><span class="fw-bold fs-5">Publisher:</span> {{ bookDetails.publisher || 'Publisher information not available' }}</li>
+          <li><span class="fw-bold fs-5">ISBN:</span> {{ bookDetails.industryIdentifiers?.[0]?.identifier || 'ISBN not available' }}</li>
+        </ul>
       </div>
+    </div>
   </div>
 </div>
